RESOLVED FIXED46513
REGRESSION (r68054): Buttons no longer render at correct sizes
https://bugs.webkit.org/show_bug.cgi?id=46513
Summary REGRESSION (r68054): Buttons no longer render at correct sizes
Mark Rowe (bdash)
Reported 2010-09-24 14:23:22 PDT
After <http://trac.webkit.org/changeset/68054> it looks as though some amount of state is not being reset between the handling of independent buttons. Typically buttons expressed as <input type="submit" style="font-size: 10px”> render at a shorter height. If it’s on a page following a regular sized button you’ll see that its rendering at the wrong height.
Attachments
Patch (141.20 KB, patch)
2010-09-27 17:11 PDT, Darin Adler
mitz: review+
Mark Rowe (bdash)
Comment 1 2010-09-24 14:24:16 PDT
Darin Adler
Comment 2 2010-09-24 18:33:48 PDT
One thing I noticed in http://trac.webkit.org/changeset/68054 is that I got the logic backwards in this expression: "((states & DefaultState) ? nonDefaultButton : defaultButton)". But I don’t see anything else yet.
Darin Adler
Comment 3 2010-09-27 17:11:00 PDT
Darin Adler
Comment 4 2010-09-27 17:40:27 PDT
WebKit Review Bot
Comment 5 2010-09-27 17:48:21 PDT
http://trac.webkit.org/changeset/68459 might have broken Qt Linux Release minimal, Qt Linux ARMv5 Release, and Qt Linux ARMv7 Release The following changes are on the blame list: http://trac.webkit.org/changeset/68459 http://trac.webkit.org/changeset/68460
Note You need to log in before you can comment on or make changes to this bug.