2010-09-27  Darin Adler  <darin@apple.com>

Reviewed by Dan Bernstein.

        REGRESSION (r68054): Buttons no longer render at correct sizes
        https://bugs.webkit.org/show_bug.cgi?id=46513

        Test: fast/forms/input-button-sizes.html

        The setUpButtonCell function was running only once, but needed to run every time
        through the button function.

        * platform/mac/ThemeMac.mm:
        (WebCore::leakButtonCell): Added. Separate one-time initialization code.
        (WebCore::setUpButtonCell): Removed the first-time initialization part of this function.
        (WebCore::button): Merged the three functions back into one.
2010-09-27  Darin Adler  <darin@apple.com>

        Reviewed by Dan Bernstein.

        REGRESSION (r68054): Buttons no longer render at correct sizes
        https://bugs.webkit.org/show_bug.cgi?id=46513

        * fast/forms/input-button-sizes.html: Copied from LayoutTests/fast/forms/button-sizes.html.
        Turned into a distinct test of <input type=button>; old test was for <button>.

        * platform/mac/fast/forms/input-button-sizes-expected.checksum: Added.
        * platform/mac/fast/forms/input-button-sizes-expected.png: Added.
        * platform/mac/fast/forms/input-button-sizes-expected.txt: Added.

        * platform/mac/fast/forms/disabled-select-change-index-expected.checksum: Added.
        * platform/mac/fast/forms/disabled-select-change-index-expected.png: Added.
        * platform/mac/fast/forms/file-input-disabled-expected.checksum: Added.
        * platform/mac/fast/forms/file-input-disabled-expected.png: Added.


Canonical link: https://commits.webkit.org/59147@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68459 268f45cc-cd09-0410-ab3c-d52691b4dbfc